create and Show event done

--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -21,79 +21,24 @@
             android:layout_marginTop="30dp"
             android:layout_marginBottom="10dp"
             android:fontFamily="@font/amarante"
-            android:text="Create Your Own Event"
+            android:text="@string/create_your_own_event"
             android:textColor="@android:color/white"
             android:textSize="35sp"
             android:textStyle="bold" />
-
-        <RelativeLayout
-            android:id="@+id/rl1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/txt1">
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/event_dateTVL"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                android:layout_width="170dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginBottom="5dp"
-                android:hint="Event Date"
-                app:boxStrokeColor="@android:color/white"
-                android:textColorHint="@android:color/white">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/event_date"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:focusable="false"
-                    android:gravity="center"
-                    android:textColor="@android:color/white"
-                    android:textSize="21sp" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/event_timeTVL"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                android:layout_width="170dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="15dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginBottom="5dp"
-                android:hint="Event Time"
-                app:boxStrokeColor="@android:color/white"
-                android:textColorHint="@android:color/white">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/event_time"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:focusable="false"
-                    android:gravity="center"
-                    android:textColor="@android:color/white"
-                    android:textSize="21sp" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-
-        </RelativeLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/event_placeTVL"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/rl1"
+            android:layout_below="@+id/txt1"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             app:boxStrokeColor="@android:color/white"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="5dp"
-            android:hint="Meeting Place"
+            android:hint="@string/tour_place"
             android:textColorHint="@android:color/white">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -105,19 +50,98 @@
         </com.google.android.material.textfield.TextInputLayout>
 
 
+        <RelativeLayout
+            android:id="@+id/rl1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/event_placeTVL"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="5dp">
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/event_dateTVL"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="20dp"
+                android:hint="@string/event_date"
+                app:boxStrokeColor="@android:color/white"
+                android:textColorHint="@android:color/white">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/event_date"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:focusable="false"
+                    android:paddingStart="15dp"
+                    android:paddingEnd="15dp"
+                    android:textColor="@android:color/white"
+                    android:textSize="21sp" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/event_timeTVL"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="20dp"
+                android:hint="@string/event_time"
+                app:boxStrokeColor="@android:color/white"
+                android:textColorHint="@android:color/white">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/event_time"
+                    android:layout_width="match_parent"
+                    android:paddingStart="15dp"
+                    android:paddingEnd="15dp"
+                    android:focusable="false"
+                    android:layout_height="wrap_content"
+                    android:textColor="@android:color/white"
+                    android:textSize="21sp" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+        </RelativeLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/meeting_placeTVL"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/rl1"
+            android:layout_centerHorizontal="true"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            app:boxStrokeColor="@android:color/white"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="5dp"
+            android:hint="@string/meeting_place"
+            android:textColorHint="@android:color/white">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/meeting_place"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/white"
+                android:textSize="21sp" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+
         <EditText
             android:id="@+id/event_description"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:layout_below="@+id/event_placeTVL"
+            android:layout_below="@+id/meeting_placeTVL"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="5dp"
             android:background="@drawable/edit_text_design2"
             android:gravity="top|start"
-            android:hint="Write about tour"
+            android:hint="@string/write_about_the_tour"
             android:inputType="textMultiLine|textCapSentences"
             android:lines="10"
             android:maxLength="2000"
@@ -127,20 +151,21 @@
             android:paddingBottom="5dp"
             android:textColor="@android:color/white"
             android:textColorHint="@android:color/darker_gray"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:autofillHints="" />
 
         <Button
-            android:id="@+id/signup_BTN"
+            android:id="@+id/create_eventBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/event_description"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="20dp"
-            android:layout_marginBottom="50dp"
+            android:layout_marginBottom="25dp"
             android:background="@drawable/custom_btn"
-            android:text="Create Event"
+            android:text="@string/create_event"
             android:textAllCaps="false"
             android:textColor="@android:color/white" />
     </RelativeLayout>
