--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -62,11 +62,13 @@
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
+
     <LinearLayout
         android:id="@+id/ll1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/event_searchCV"
+        android:layout_marginTop="10dp"
         android:orientation="vertical">
 
         <androidx.recyclerview.widget.RecyclerView
