--- a/app/src/main/res/drawable/edit_text_design2.xml
+++ b/app/src/main/res/drawable/edit_text_design2.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <stroke android:width="2dp"
-        android:color="@color/colorBlue"/>
+        android:color="@color/colorGreen"/>
 
-    <corners android:radius="5dp"/>
+    <corners android:radius="10dp"/>
 
 </shape>
