--- a/app/src/main/res/layout/fragment_tour.xml
+++ b/app/src/main/res/layout/fragment_tour.xml
@@ -90,7 +90,7 @@
         android:layout_marginEnd="20dp"
         android:focusableInTouchMode="true"
         android:fontFamily="@font/amarante"
-        android:hint="Location"
+        android:hint="District"
         android:textColorHint="@color/colorYellow">
 
         <AutoCompleteTextView
@@ -109,10 +109,26 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <LinearLayout
+    <Button
+        android:id="@+id/licationSelection"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/location_TIL"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="20dp"
+        android:text="Select location"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textColor="#FFFFFF"
+        android:visibility="gone"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/licationSelection"
+        android:layout_marginTop="5dp"
         android:orientation="horizontal"
         android:weightSum="2">
 
@@ -124,7 +140,6 @@
             android:layout_below="@+id/location_TIL"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
             android:layout_marginEnd="20dp"
             android:layout_weight="1"
             android:fontFamily="@font/amarante"
@@ -148,15 +163,11 @@
         </com.google.android.material.textfield.TextInputLayout>
 
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="6dp"
-            android:fontFamily="@font/amarante"
-            android:text="To"
-            android:textColor="#000"
-            android:textSize="21sp" />
+        <ImageView
+            android:id="@+id/direction"
+            android:layout_width="30dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/direction" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/date2_TIL"
@@ -166,7 +177,6 @@
             android:layout_below="@+id/location_TIL"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
             android:layout_marginEnd="20dp"
             android:layout_weight="1"
             android:fontFamily="@font/amarante"
@@ -189,5 +199,7 @@
 
         </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
+
+
 
 </RelativeLayout>
