--- a/app/src/main/res/layout/location_selection_bottom_sheet.xml
+++ b/app/src/main/res/layout/location_selection_bottom_sheet.xml
@@ -1,18 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/locationSelectionBTMSLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/transparent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:padding="16dp">
 
 
+    <TextView
+        android:id="@+id/selectionStatus"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/amarante"
+        android:paddingBottom="5dp"
+        android:text="Select places that you want to visit"
+        android:textAlignment="center"
+        android:textColor="@color/quantum_grey700"
+        android:textSize="16sp" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/locationSelection_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:layout_below="@id/selectionStatus" />
 
 
 </RelativeLayout>
