--- a/app/src/main/res/layout/event_layout_design.xml
+++ b/app/src/main/res/layout/event_layout_design.xml
@@ -13,6 +13,12 @@
         android:backgroundTint="@android:color/white"
         app:cardCornerRadius="10dp">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:id="@+id/member_id" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
