--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -8,7 +8,9 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:visibility="visible">
+
 
         <RelativeLayout
             android:id="@+id/relative1"
@@ -279,7 +281,7 @@
             android:textColor="@android:color/white"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:visibility="visible" />
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/cancel_joinBtn"
@@ -297,5 +299,22 @@
             android:textStyle="bold"
             android:visibility="gone" />
 
+        <TextView
+            android:id="@+id/txt7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/relative7"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="50dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            android:background="#ABF8ABAB"
+            android:text="you are admin of this event"
+            android:textColor="@android:color/black"
+            android:textSize="18sp"
+            android:visibility="gone" />
     </RelativeLayout>
+
+
 </ScrollView>
